--- a/css/style.scss
+++ b/css/style.scss
@@ -266,23 +266,20 @@ h1 {
             li {
                 float: left;
                 font-size: 1em;
-                line-height: 0;
-                margin: 0;
                 padding-right: 0.7em;
 
                 &:last-child {
                     padding-right: 0;
                 }
-            }
 
-            img {
-                height: 1.6em;
-                opacity: 0.7;
-                padding: 1px;
-
-                &:focus,
-                &:hover {
-                    opacity: 1;
+                a {
+                  color: rgba(255,255,255,0.4);
+                  text-decoration: none;
+                  padding: 1px;
+                  &:focus,
+                  &:hover {
+                      color: rgba(255,255,255,0.6);
+                  }
                 }
             }
         }
